Fix buttons alignment and links decoration

--- a/styles/_setting.scss
+++ b/styles/_setting.scss
@@ -4,5 +4,5 @@ $default-font-family-uppercase: 'Source Sans Pro', sans-serif;
 $primary-color : #666666;
 $secundary-color : white;
 /*$text-color: #212931; queda mejor que el negro puro*/
-/*$article-border-color: solid #eeeeee;*/
-/*$breakpoint-tablet: 768px; Sustistuir en las media querys*/
+$article-border-color: solid #eeeeee;
+$breakpoint-tablet: 768px;
