--- a/styles/layout/_testimonios_main.scss
+++ b/styles/layout/_testimonios_main.scss
@@ -22,7 +22,7 @@
 
 .posts-container article {
   display: block;
-  border: 1px solid #eeeeee;
+  border: 1px $article-border-color;
   padding: 5%;
   margin: auto;
   max-width: 100%;
@@ -35,7 +35,7 @@
   text-align: center;
 }
 
-.post-container a {
+.post-article a {
   color: inherit;
   text-decoration: none;
 }
@@ -49,11 +49,12 @@
 }
 
 .posts-container button {
+  display: block;
   text-transform: uppercase;
+  margin: auto;
 }
 
 
-$breakpoint-tablet: 768px;
 @media (min-width: $breakpoint-tablet) {
 
 
